--- a/index.html
+++ b/index.html
@@ -12,18 +12,24 @@
     <form>
       <div class="fieldset">
         <label for="text1">Username</label>
-        <input type="text" id="text1" placeholder="Field Text" />
-      </div>
-      <div class="fieldset">
-        <label for="text1">Title</label>
-        <input type="text" id="text1" placeholder="Field Text" />
-      </div>
-
-      <div class="fieldset">
-        <label for="textarea1">Content</label>
-        <textarea id="textarea1" placeholder="Field Textarea"></textarea>
+        <input type="text" id="text1" placeholder="Enter Username" />
       </div>
     </form>
+
+    <form>
+      <div class="fieldset">
+        <label for="text2">Title</label>
+        <input type="text" id="text2" placeholder="Enter Title" />
+      </div>
+    </form>
+
+    <form>
+      <div class="fieldset">
+        <label for="textarea1">Content</label>
+        <textarea id="textarea1" placeholder="what do you want to say"></textarea>
+      </div>
+    </form>
+
     <button class="submit">Submit</button>
   </body>
 </html>
