--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
   <body>
     <h1 class="title">Welcome To My Blog!</h1>
 
-    <form>
+    <form class="form-css">
       <div class="fieldset">
         <label for="text1">Username</label>
         <input type="text" id="text1" placeholder="Enter Username" />
       </div>
     </form>
 
-    <form>
+    <form class="form-css">
       <div class="fieldset">
         <label for="text2">Title</label>
         <input type="text" id="text2" placeholder="Enter Title" />
       </div>
     </form>
 
-    <form>
+    <form class="form-css">
       <div class="fieldset">
         <label for="textarea1">Content</label>
         <textarea id="textarea1" placeholder="what do you want to say"></textarea>
