--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       </div>
     </form>
 
-    <button class="submit">Submit</button>
+    <p id="name">
+
+    <button id="submit-button">Submit</button>
     <script src="./assets/js/form.js"></script>
   </body>
 </html>
